--- a/Excercises/package.json
+++ b/Excercises/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server --watch db.json --host 127.0.0.1"
   },
   "dependencies": {
     "axios": "^1.6.2",
