--- a/blog-server/package.json
+++ b/blog-server/package.json
@@ -19,7 +19,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.6",
-    "mongoose-unique-validator": "^4.0.0"
+    "mongoose-unique-validator": "^4.0.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
