--- a/phonebook-graphql-server/package.json
+++ b/phonebook-graphql-server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.9.4",
     "@apollo/server": "^4.10.0",
     "graphql": "^16.8.1"
   }
