--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@apollo/client": "^3.9.4",
     "@apollo/server": "^4.10.0",
-    "graphql": "^16.8.1"
+    "dotenv": "^16.4.5",
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.1",
+    "mongoose-unique-validator": "^5.0.0"
   }
 }
