--- a/phonebook-graphql-server/package.json
+++ b/phonebook-graphql-server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@apollo/client": "^3.9.4",
     "@apollo/server": "^4.10.0",
-    "graphql": "^16.8.1"
+    "dotenv": "^16.4.5",
+    "graphql": "^16.8.1",
+    "mongoose": "^8.2.1"
   }
 }
