palying with process.argv

--- a/Part9-Typescript/package.json
+++ b/Part9-Typescript/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
+    "@types/node": "^22.14.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "ts-node": "ts-node"
+    "ts-node": "ts-node",
+    "calculator": "ts-node calculator.ts"
   }
 }
